补充代码注释 添加部分关键代码单元测试 REAMDME.md补充 一些bug处理